# routes/pets/petsRoute.js
@@ -10,14 +10,14 @@ const {
 const { addPetSchemaValidation } = require("../../schema");
 const { Image } = require("../../services");
 const { addPet, deletePet } = require("../../controllers");
-const { file, schemaMessage, errorMessage } = require("../../constants");
+const { file, errorMessage } = require("../../constants");
 
 const router = express.Router();
 
-router.use(authentificate);
+router.use(authentificate("token"));
 
 router.post(
-  "/",
+  "/add",
   Image.uploadErrorHandler(file.pet.fieldName, file.pet.fileName),
   checkFieldData,
   fieldValidation(addPetSchemaValidation),
@@ -25,7 +25,7 @@ router.post(
 );
 
 router.delete(
-  "/:petId",
+  "/delete/:petId",
   isValidId(400, errorMessage[400]),
   checkUserAuth,
   deletePet
