# routes/users/usersRoute.js
@@ -2,7 +2,6 @@ const express = require("express");
 
 const {
   authentificate,
-  authentificateByRefreshToken,
   fieldValidation,
   checkUserData,
 } = require("../../middlewares");
@@ -18,14 +17,13 @@ const { Image } = require("../../services");
 const {
   register,
   login,
-  current,
   logout,
   refresh,
   update,
   getMe,
 } = require("../../controllers");
 
-const { file, schemaMessage } = require("../../constants");
+const { file } = require("../../constants");
 
 const router = express.Router();
 
@@ -33,21 +31,19 @@ router.post("/register", fieldValidation(registerSchemaValidation), register);
 
 router.post("/login", fieldValidation(loginSchemaValidation), login);
 
-router.post("/refresh", authentificateByRefreshToken, refresh);
+router.post("/refresh", authentificate("refreshToken"), refresh);
 
-router.post("/current", authentificate, current);
+router.get("/current", authentificate("token"), getMe);
 
-router.post("/logout", authentificate, logout);
+router.post("/logout", authentificate("token"), logout);
 
 router.put(
   "/update",
-  authentificate,
+  authentificate("token"),
   Image.uploadErrorHandler(file.avatar.fieldName, file.avatar.fileName),
   fieldValidation(editUserValidation),
   checkUserData,
   update
 );
-
-router.get("/", authentificate, getMe);
 
 module.exports = router;
